	* Support scrollwheel in a larger area.
	* Fix Edit -> Fill -> Autofill
	* Improve dbf importer.
	* Make autocorrect non-modal and cleaner.
	* Make autocompletion a view attribute, with a gui.

Jukka:
	* Lots of documentation added.
	* Added `Help' buttons for various tools.
	* Help button of autosave doesn't kill the dialog any more.
	* Added `Filter' submenu into the `Data' menu.

Morten:
	* Cleanup various functions' improper access to internal strings.

--------------------------------------------------------------------------
Gnumeric 0.74

Jody:
	* Fix regexp handling of escaped characters.
	* Improve XL import when faced with corrupt workbooks.

Morten:
	* Find and fix leaks.
	* Fix an ugly dependency bug.

--------------------------------------------------------------------------
Gnumeric 0.73

Adrian Custer:
	* Improve latex exporter to support multiple pages and basic support
	  for merges.

Almer:
	* More work on validation.
	* Improve View menu layout.

Andreas:
	* Allow analysis tool output to be directed onto a range 
          on another sheet.
	* Allow analysis tool output ranges to be specified using 
	  defined names.
	* Change covariance, correlation, descriptive statistics and 
	  sampling tools to allow multiple selections (and defined
          names as input.
	* Change covariance and correlation tools to handle missing 
          observations.
	* Change sampling tool to permit multiple samples from the 
          same or different data. 

Jody:
	* Fix autosizing of indented content.
	* Fix jump to bound with end in hidden region.
	* Hide objects in hidden regions for display and printing.
	* LOG() is valid with base > 0 && base != 1
	* Clean out some unused code.
	* Fix redo of unmerge to handle redraw spans.
	* Fix Name Support and Dialog.
	* Improve data allocator for graphs.
	* Begin code audit.
	* Fix autofill of days with months visible.
	* Fix minor leaks.
	* Improve recognition of values vs expressions